# crispy-octo-funicular

./: .gitignore  DESIGN.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  VIDEO_FEATURE.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: ai_adapter.py  config.py  constants.py  logging_config.py  main.py  message_processor.py  models.py  queue_publisher.py  queue_worker.py  storage.py  trace.py  video_processor.py  webhook_handler.py  worker.py
scripts/: deploy.sh  local_tunnel.sh  register_webhook.sh
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_ai_adapter.py  test_message_processor.py  test_video_processor.py  test_webhook_handler.py
