[project]
name = "telegram-ai-bot"
version = "0.1.0"
description = "Telegram AI Group Chat Bot"
requires-python = ">=3.12"

[tool.black]
line-length = 100

[tool.semantic_release]
version_variable = "pyproject.toml:project.version"
branch = "main"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"
build_command = ""
upload_to_repository = false
